selección de grupo y de usuarios

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,1 +1,10 @@
-<router-outlet></router-outlet>
+<app-navbar />
+
+@if (isLoggin) {
+    <app-home />
+} @else {
+    <app-index />
+}
+
+<app-footer />
+    
