--- a/frontend/src/app/components/footer/footer.component.html
+++ b/frontend/src/app/components/footer/footer.component.html
@@ -1,1 +1,1 @@
-<footer class="fixed-bottom bg-dark text-light p-2 text-center">© 2023 Copyright: Grupo 10</footer>
+<footer class="fixed-bottom">Group10 - JJM Development</footer>
