--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -1,135 +1,1 @@
-<app-navbar />
-<div class="container">
-  <div>
-    <h1 class="display-3 mt-2">Mis grupos</h1>
-    <button type="button" class="btn btn-sm btn-success px-4">Crear grupo</button>
-  </div>
-  <div class="btn-group mt-4" role="group" aria-label="Basic radio toggle button group">
-    <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
-    <label class="btn btn-sm btn-outline-dark" for="btnradio1">Todos</label>
-
-    <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
-    <label class="btn btn-sm btn-outline-dark" for="btnradio2">Actuales</label>
-
-    <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
-    <label class="btn btn-sm btn-outline-dark" for="btnradio3">Finalizados</label>
-  </div>
-
-  <div class="mt-4 mb-5">
-    <div class="row">
-      <!-- Barra lateral a la izquierda -->
-      <div class="col-md-4 sidebar">
-        <ul class="list-group">
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidCakeCandles" size="28px" style="margin-right: 8px;" />
-              Cumple Mati
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidPlaneDeparture" size="28px" style="margin-right: 8px;" />
-              Viaje a pinamar
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidPlaneDeparture" size="28px" style="margin-right: 8px;" />
-              Viaje a Mendonza
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidBagShopping" size="28px" style="margin-right: 8px;" />
-              Shopping :)
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidCakeCandles" size="28px" style="margin-right: 8px;" />
-              Cumple Manaos
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidPeopleGroup" size="28px" style="margin-right: 8px;" />
-              Futbol de los viernes
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidBagShopping" size="28px" style="margin-right: 8px;" />
-              Compras
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidPeopleGroup" size="28px" style="margin-right: 8px;" />
-              Salida
-            </span>
-          </li>
-          <li class="list-group-item p-4">
-            <span style="align-items: center; display: flex; justify-content:center;">
-              <ng-icon name="faSolidTaxi" size="28px" style="margin-right: 8px;" />
-              Uber
-            </span>
-          </li>
-        </ul>
-      </div>
-
-      <!-- Contenido a la derecha -->
-      <div class="col-md-8 content" style="background-color: #f6f6f6;">
-
-        <!-- Titulo y descripcion -->
-        <div class="px-5 py-4">
-          <span style="display: flex; flex-wrap: wrap; align-items: center;">
-            <h1 class="display-5">Cumple Mati</h1>
-            <ng-icon name="faSolidCakeCandles" size="35px" style="margin-left: 1.2em; margin-top: -5px;" />
-          </span>
-          <hr />
-          <h4 style="font-size: large; font-weight: bold;">Total gastos: $20000</h4>
-          <div><b>Categoria:</b> Cumpleaños</div>
-          <p><b>Descripcion:</b> Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua
-          </p>
-
-          <button class="btn btn-sm btn-dark">Agregar</button>
-          <hr />
-
-          <!-- Adminstracion de integrantes y tablas (listas) -->
-          <div>
-            <h4>Miembros</h4>
-            <div>Manaos x - Matias x - Juli x </div>
-
-            <table class="table table-striped table-hover table-bordered">
-              <thead class="table-secondary">
-                <tr>
-                  <th scope="col">#</th>
-                  <th scope="col">Nombre</th>
-                  <th scope="col">Debe</th>
-                  <th scope="col">Usuario</th>
-                </tr>
-              </thead>
-              <tbody class="table-group-divider">
-                <tr>
-                  <th scope="row">1</th>
-                  <td>Mark</td>
-                  <td>Otto</td>
-                  <td>mdo</td>
-                </tr>
-                <tr>
-                  <th scope="row">2</th>
-                  <td>Jacob</td>
-                  <td>Thornton</td>
-                  <td>fat</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-</div>
-<!-- <app-footer /> -->
+<p>groups works!</p>
