--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,47 +1,1 @@
-<app-navbar />
-<div class="container mt-5" style="align-items: center;">
-  <div class="row">
-    <div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0">
-        <div class="card mb-3">
-          <div class="card-body" routerLink="/grupos">
-            <h5 class="card-title">Grupos</h5>
-            <img src="../../assets/images/groups.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/payments">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Pagos</h5>
-            <img src="../../assets/images/payments.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/contacts">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Contactos</h5>
-            <img src="../../assets/images/contacts.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 mb-3 mb-sm-0" routerLink="/gastos">
-        <div class="card mb-3">
-          <div class="card-body">
-            <h5 class="card-title">Gastos</h5>
-            <img src="../../assets/images/spending.png" height="80px">
-            <p class="card-text"><small class="text-muted">Una descripción</small></p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<app-footer />
+<router-outlet></router-outlet>
