--- a/frontend/src/app/components/groups/groups.component.html
+++ b/frontend/src/app/components/groups/groups.component.html
@@ -2,10 +2,13 @@
 <div class="container">
   <div>
     <h1 class="display-3 mt-2">Grupos</h1>
-    <button type="button" class="btn btn-sm btn-dark px-4">Crear grupo</button>
+    <button type="button" class="btn btn-sm btn-dark px-4" data-bs-target="#modal-group-add-form" data-bs-toggle="modal"
+      (click)="getGroupCategories()">
+      Crear grupo
+    </button>
   </div>
-  <app-group-create />
-  <app-group-details />
+  <app-group-create [groupCategories]="groupCategories" />
+  <app-group-details [groupSpendings]="groupSpendings" />
   <div class="btn-group mt-4" role="group" aria-label="Basic radio toggle button group">
     <!-- <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
     <label class="btn btn-sm btn-outline-dark" for="btnradio1">Todos</label> -->
@@ -39,7 +42,6 @@
         <!-- Titulo y descripcion -->
         <div class="px-5 py-4">
           <span style="display: flex; flex-wrap: wrap; align-items: center;">
-            <!-- <h1 class="display-5">Cumple Mati</h1> -->
             <h1 class="display-5">{{ actualGroup.name }}</h1>
             <ng-icon name="faSolidCakeCandles" size="35px" style="margin-left: 1.2em; margin-top: -5px;" />
           </span>
@@ -52,7 +54,7 @@
             <b>Descripcion:</b> {{ actualGroup.description }}
           </p>
 
-          <button class="btn btn-sm btn-dark" data-bs-target="#modal-group-add-form" data-bs-toggle="modal">
+          <button class="btn btn-sm btn-dark">
             Agregar integrante
           </button>
           <hr />
@@ -68,38 +70,12 @@
             <hr />
 
             <div class="mt-4">
-              <!-- Lista deudas -->
+              <!-- Lista invitaciones -->
               <span class="mb-1" style="display: flex;">
-                <h3>Deudas pendientes</h3>
+                <h3>Invitaciones</h3>
               </span>
 
-              <!-- Lista que debera ser componente eventualmente -->
-              <table class="table table-striped table-hover table-bordered">
-                <thead class="table-secondary">
-                  <tr>
-                    <th scope="col">Nombre</th>
-                    <th scope="col">Monto</th>
-                    <th scope="col">Acreedor</th>
-                  </tr>
-                </thead>
-                <tbody class="table-group-divider">
-                  <tr>
-                    <td>Juliana</td>
-                    <td>400</td>
-                    <td>Matias</td>
-                  </tr>
-                  <tr>
-                    <td>Juliana</td>
-                    <td>300</td>
-                    <td>Manaos</td>
-                  </tr>
-                  <tr>
-                    <td>Matias</td>
-                    <td>500</td>
-                    <td>Manaos</td>
-                  </tr>
-                </tbody>
-              </table>
+              <app-groups-invitations-list [invitations]="actualGroup.invitations" />
 
               <!-- Lista Gastos -->
               <span class="mt-5 mb-1" style="display: flex;">
@@ -107,13 +83,13 @@
                 <button class="btn btn-sm btn-dark ms-2" style="height: fit-content;">Agregar</button>
               </span>
               <div class="col-12 overflow-x-hidden overflow-y-scroll" style="max-height:350px;">
-                <app-groups-list />
+                <app-groups-list [groupSpendings]="groupSpendings" />
               </div>
             </div>
 
-            <div class="row justify-content-end">
+            <!-- <div class="row justify-content-end">
               <button class="btn px-3 btn-dark mt-4" style="width: inherit;">Marcar como finalizado</button>
-            </div>
+            </div> -->
 
           </div>
         </div>
