--- a/frontend/src/app/components/modals/group/group-create/group-create.component.html
+++ b/frontend/src/app/components/modals/group/group-create/group-create.component.html
@@ -5,44 +5,58 @@
 
       <div class="modal-header">
         <h1 class="modal-title fs-5" id="addFormModal">Nuevo grupo</h1>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"
+          (click)="handleClose()"></button>
       </div>
 
       <div class="modal-body">
-        <form>
+        <form [formGroup]="createForm">
           <div class="mb-2">
             <label for="name-add-form" class="col-form-label">Nombre del grupo</label>
-            <input type="text" class="form-control" id="name-add-form">
+            <input type="text" class="form-control" id="name-add-form" formControlName="name">
+          </div>
+
+          <div class="mb-2">
+            <label for="name-add-form" class="col-form-label">Monto</label>
+            <input type="text" class="form-control" id="name-add-form" formControlName="amount">
           </div>
 
           <div class="mb-2">
             <label for="docExtractor-add-form" class="col-form-label">Descripcion</label>
-            <textarea class="form-control" id="docExtractor-add-form" rows="3" spellcheck="false"></textarea>
+            <textarea class="form-control" id="docExtractor-add-form" rows="3" spellcheck="false"
+              formControlName="description"></textarea>
           </div>
 
           <div class="mb-2 mt-2">
             <label for="categoryAdd" class="form-label">Categoria</label>
-            <select class="form-select" name="categoryAdd" id="categoryAdd" aria-label="Default select example">
-              <option selected>Open this select menu</option>
-              <option value="1">One</option>
-              <option value="2">Two</option>
-              <option value="3">Three</option>
+            <select class="form-select" name="categoryAdd" id="categoryAdd" aria-label="Default select example"
+              formControlName="categoryId">
+              <option [ngValue]="-1">Seleccionar una categoria</option>
+              @for (category of groupCategories; track $index) {
+                <option [ngValue]="category.id">{{category.name}}</option>
+              }
             </select>
           </div>
 
           <div class="mb-2 mt-3">
-            <label for="exampleDataList" class="form-label">Datalist example</label>
-            <input class="form-control" list="datalistOptions" id="exampleDataList" placeholder="Type to search...">
-            <datalist id="datalistOptions">
-              <option value="1">Pepe</option>
-              <option value="2">Manaos</option>
-              <option value="5">Juli</option>
-              <option value="8">Matias</option>
-              <option value="9">Ange Postecoglou (123456)</option>
-            </datalist>
+            <label for="name-add-form" class="col-form-label">Integrantes</label>
+            <input type="text" class="form-control" id="name-add-form" formControlName="searchInput"
+              (input)="handleSearch()">
           </div>
+          @if (searched.length !== 0 ) {
+            <ul class="list-group list-group-numbered">
+              @for (searchedUser of searched; track $index) {
+                <li class="list-group-item d-flex justify-content-between align-items-start" (click)="handleAddUser(searchedUser.id)">
+                  <div class="ms-2 me-auto">
+                    <div class="fw-bold">{{searchedUser.username}}</div>
+                    {{searchedUser.name}} {{searchedUser.lastName}}
+                  </div>
+                </li>
+              }
+            </ul>
+          }
 
-          <div class="mt-3">
+          <div class="mt-4">
             <span class="badge rounded-pill text-bg-dark py-2 px-3">Juliana</span>
             <span class="badge rounded-pill text-bg-dark py-2 px-3 ms-1">Matias</span>
             <span class="badge rounded-pill text-bg-dark py-2 px-3 ms-1">Manaos</span>
@@ -51,7 +65,7 @@
       </div>
 
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="handleClose()">Cerrar</button>
         <button type="button" class="btn btn-primary" data-bs-dismiss="modal">
           Crear grupo
         </button>
